Configure pytest pythonpath=src; add multiply/divide happy-path tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,15 +1,18 @@
-[tool:pytest]
+# pytest.ini
+[pytest]
+pythonpath =
+    src
 testpaths = tests
 python_files = test_*.py
 python_functions = test_*
-addopts = 
+addopts =
     -v
     --tb=short
     --strict-markers
     --disable-warnings
 markers =
     unit: Unit tests
-    integration: Integration tests  
+    integration: Integration tests
     system: System tests
     acceptance: Acceptance tests
     slow: Slow running tests
